Update jss-in-a-box.sh
Removed depreciated memory code.